--- a/World_Wide_Unicorn_Startup.ipynb
+++ b/World_Wide_Unicorn_Startup.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>INTRODUCTION</b><br>\n",
-    "\n",
+    "<b>INTRODUCTION</b>\n",
+    "<br>\n",
     "The dataset is a list of unicorn startup companies in the world from 2007 to 2021.\n",
     "The dataset contains of following variables: Company, Valuation, Date, Country, City, Industry, Investors, year, month, day.\n",
     "\n",
@@ -453,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Checking for missing values in the data"
+    "<b>Checking for missing values in the data</b>"
    ]
   },
   {
@@ -507,14 +507,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Check for incositent data in following columns: Country, Industry and Investors."
+    "<b>Check for incositent data in following columns: Country, Industry and Investors</b>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.1. Country column"
+    "<b>Country column<b>"
    ]
   },
   {
@@ -598,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.2. Industry column"
+    "<b>Industry column</b>"
    ]
   },
   {
@@ -677,7 +677,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.3. Investors column"
+    "<b>Investors column</b>"
    ]
   },
   {
@@ -1948,7 +1948,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Top five highest valuation companies"
+    "<b>1. Top five highest valuation companies</b>"
    ]
   },
   {
@@ -2127,7 +2127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Number of startup companies in each year"
+    "<b>2. Number of startup companies in each year</b>"
    ]
   },
   {
@@ -2200,7 +2200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Top five countries with highest number of startup companies"
+    "<b>3. Top five countries with highest number of startup companies</b>"
    ]
   },
   {
@@ -2248,7 +2248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Most interested Industry"
+    "<b>4. Most interested industry</b>"
    ]
   },
   {
@@ -2330,7 +2330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Top five regular investors"
+    "<b>5. Top five regular investors</b>"
    ]
   },
   {
@@ -2384,7 +2384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. The relationship of industry and valuation according to data in 2021."
+    "<b>6. The relationship of industry and valuation according to data in 2021</b>"
    ]
   },
   {
