--- a/World_Wide_Unicorn_Startup.ipynb
+++ b/World_Wide_Unicorn_Startup.ipynb
@@ -1941,7 +1941,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>DATA ANALYSIS</b>"
+    "<b>EXPLORATORY DATA ANALYSIS</b>"
    ]
   },
   {
